fix gradient in game not stretching to screen height

--- a/public/css/tictactoe.css
+++ b/public/css/tictactoe.css
@@ -7,6 +7,7 @@ body {
     color: #1c1c1c;
     overflow-x: hidden;
     overflow-y: hidden;
+    min-height: 100vh;
 }
 
 /* Navigation bar styling */
